# Minisatid

./: .cproject  .gitignore  .gitmodules  .project  AUTHORS  CMakeLists.txt  DESCRIPTION  Doxyfile  Makefile.am  README  TODO  configure.ac  doxygen.cfg  lcovusage  makefile  makefilewinmac  remake  testmake  werk.txt
doc/: Doxyfile  Makefile.am  inputformat.tex
lib/: Makefile.am
lib/gtest-1.6.0/: CMakeLists.txt
lib/pbsolver/: CMakeLists.txt  Debug.C  Debug.h  DebugSolver.h  Hardware.h  Hardware_adders.C  Hardware_clausify.C  Hardware_sorters.C  Main.C  Makefile.am  MiniSat.C  MiniSat.h  PB2CNF.cpp  PB2CNF.hpp  PBOptions.C  PBOptions.h  PbParser.C  PbSolver.C  PbSolver.h  PbSolver_convert.C  PbSolver_convertAdd.C  PbSolver_convertBdd.C  PbSolver_convertSort.C  SatELite.C  SatELite.h  Solver.h  SolverTypes.h  VarOrder.h
lib/pbsolver/ADTs/: FEnv.h  File.C  File.h  Global.C  Global.h  Hash_standard.h  Heap.h  Int.h  Map.h  VecAlloc.h
lib/perftools/: configure.ac
lib/pluscallback1.7/: README.txt  callback.hpp  history.txt
lib/pluscallback1.7/examples/: bench.tcl  compare.cpp  example.cpp  pointersize.cpp  smoke.cpp
lib/tclap/: Makefile.am  configure.in
mtl/: Alg.h  (+4 more)
src/: CMakeLists.txt  GeneralUtils.cpp  GeneralUtils.hpp  Main.cpp  Makefile.am  P1.TXT  Run.cpp  Run.hpp  Unittests.cpp  Unittests.hpp  minisatid-2.0.pc.in
src/constraintmonitors/: ConstraintAdditionMonitor.hpp  ECNFGraphPrinter.hpp  ECNFPrinter.hpp  HumanReadableParsingPrinter.hpp
src/constraintvisitors/: CNFPrinter.hpp  ConstraintVisitor.cpp  ConstraintVisitor.hpp  ECNFGraphPrinter.hpp  ECNFPrinter.cpp  ECNFPrinter.hpp  ExternalConstraintVisitor.cpp  FlatZincRewriter.cpp  FlatZincRewriter.hpp  HumanReadableParsingPrinter.hpp  LiteralPrinter.hpp  StatisticsPrinter.hpp
src/datastructures/: Constraints.cpp  Datastructures.cpp  InnerDataStructures.hpp  InternalAdd.hpp  OptimStatement.hpp  WL.hpp  Weight.cpp
src/exwrapper/: Constraints.cpp  Datastructures.cpp  Options.cpp  Space.cpp  Translator.cpp
src/inferences/: ModelIterationTask.cpp  ModelManager.cpp  ModelManager.hpp  Modelexpand.cpp  OneShotTasks.cpp  OneShotTasks.hpp  Printer.cpp  Printer.hpp  TaskHelpers.cpp  TaskHelpers.hpp  Tasks.cpp  Tasks.hpp
src/modules/: AbsConstr.hpp  AggPropFactory.cpp  AggPropFactory.hpp  AggSolver.cpp  AggSolver.hpp  BinConstr.cpp  BinConstr.hpp  CPSolver.cpp  CPSolver.hpp  DPLLTmodule.cpp  DPLLTmodule.hpp  Definition.cpp  Definition.hpp  FDAggConstraint.cpp  FDAggConstraint.hpp  IDSolver.cpp  IDSolver.hpp  IntVar.cpp  IntVar.hpp  LazyAtomPropagator.cpp  LazyAtomPropagator.hpp  LazyClause.cpp  LazyClause.hpp  LazyGrounder.cpp  LazyGrounder.hpp  LazyImplication.cpp  LazyImplication.hpp  LazyIntVar.cpp  LazyResidual.cpp  LazyResidual.hpp  Makefile.am  ModSolver.cpp  ModSolver.hpp  SCC2SAT.hpp  SCCtoCNF.cpp  SCCtoCNF.hpp  Symmetrymodule.hpp
src/modules/aggsolver/: Agg2SAT.cpp  Agg2SAT.hpp  AggPrint.cpp  AggPrint.hpp  AggProp.cpp  AggProp.hpp  AggPropagator.cpp  AggPropagator.hpp  AggSet.cpp  AggSet.hpp  AggTransform.cpp  AggTransform.hpp  AggUtils.cpp  AggUtils.hpp  FullyWatched.cpp  FullyWatched.hpp  GenPartiallyWatched.cpp  PartiallyWatched.cpp  PartiallyWatched.hpp  (+1 more)
src/monitors/: ECNFGraphPrinter.hpp  HumanReadableParsingPrinter.hpp  ParsingMonitor.hpp  SearchMonitor.hpp
src/mtlold/: Alg.h  Map.h  Queue.h  Sort.h  StackAlloc.h  Vec.h
src/parser/: CommandLineOptions.cpp  CommandLineOptions.hpp  ECNFScanner.cpp  ECNFScanner.hpp  FZScanner.cpp  FZScanner.hpp  Input format  Lparseread.cpp  Lparseread.hpp  Makefile.am  PBread.cpp  PBread.hpp  ParseOptions.cpp  ParseOptions.hpp  Parser.cpp  Parser.hpp  ResourceManager.cpp  ResourceManager.hpp  ecnfparser.ypp  ecnftoken.lpp  flatzinclexer.lpp  flatzincparser.ypp  inputformat
src/pbsolver/: Hardware_adders.C  Hardware_clausify.C  Hardware_sorters.C  Makefile.am  MiniSat.h  PbParser.h  PbSolver_convert.C  Solver.h
src/satsolver/: BasicSATUtils.hpp  SATSolver.cpp  SATSolver.hpp  SATUtils.cpp  SATUtils.h  SATUtils.hpp
src/solver3/: Solver.cpp  Solver.hpp  SolverTypes.hpp
src/solver3minisat/: Solver.C  Solver.h  SolverTypes.h
src/space/: Options.cpp  Remapper.hpp  SearchEngine.cpp  SearchEngine.hpp  Space.cpp  Translator.cpp
src/tclap/: CmdLine.h  Makefile.am  StdOutput.h
src/tests/: janhunentest.cpp  test_scc.cpp
src/theorysolvers/: EventQueue.cpp  EventQueue.hpp  InternalAdd.cpp  InternalAdd.hpp  LogicSolver.cpp  LogicSolver.hpp  Monitored.hpp  PCSolver.cpp  PCSolver.hpp  PropagatorFactory.cpp  PropagatorFactory.hpp  SOSolver.cpp  SOSolver.hpp  TheorySimplifier.cpp  TheorySimplifier.hpp  TimeTrail.hpp
src/utils/: ContainerUtils.hpp  ECNFPrinter.cpp  ECNFPrinter.hpp  FileManagement.cpp  FileManagement.hpp  FileUtils.hpp  IntTypes.h  NumericLimits.cpp  NumericLimits.hpp  PCLogger.cpp  PCLogger.hpp  Print.cpp  Print.hpp  PrintMessage.cpp  PrintMessage.hpp  ResourceManager.cpp  StringUtils.cpp  StringUtils.hpp  TimingUtils.cpp  TimingUtils.hpp  Utils.cpp  Utils.hpp
src/wrapper/: ExternalInterface.cpp  FlatZincRewriter.cpp  InterfaceImpl.cpp  InterfaceImpl.hpp  LazyClauseSupport.cpp  ResourceManager.cpp  SolvingMonitor.cpp  TerminationManagement.cpp  Translator.cpp
tests/: 1aggid  CMakeLists.txt  Cptests.cpp  Janhunentest.cpp  Mxtests.cpp  TestSuite.cpp  TestUtils.cpp  TestUtils.hpp  UNSATcpprod.ecnf  cpprod_in_SAT.ecnf  cpprod_in_SAT_NEQ.ecnf  cpprod_in_UNSAT.ecnf  cpprod_neg_SAT.ecnf  cptests.hpp  googletestsnippet.cpp  janhunentest.cpp  possiblemaxsat  unsatcore.ecnf  unsatcoresimple.ecnf
tests/aggtests/: 3SATsum  infboundprod  infboundsum  infsum  infweight  infweightmax
tests/cnftests/: UNSATF.cnf
tests/ecnfinstances/: 3SATcpprod.ecnf  4SATcpprodneg.ecnf
tests/fixptests/: SATfixpFAIRNESS2.idp  disjunctive.lp  generatefixp  n1800.facts  paritygame.idp  testIDopptoFD2  testIDopptoFD3  testfixp.idp  testfixp2.idp  testidopptofd  testscript1
tests/idtests/: 1SAT5  UNSAT9
tests/instances/: SATunboundedoptim
tests/modtests/: 3SAT6  ERROR1  ERROR2  ERROR3  testmod2  testmod3  testmod4  testmod5  testmod6
tests/optimtests/: 1  2  3  4  5
(+885 files in other folders)
